Chapter 10 — Listing 10.10: AtomicCounter.java Demonstrates: AtomicInteger for thread-safe lock-free counting